syntax = "proto3";

package ginco;


message Upgrade {
    uint32 device_id = 1;
    uint32 image_size = 2;
}

message CanMessage {
    uint32 source_id = 1;
    bool event = 2;
    bool linked = 3;
    bool ack = 4;
    uint32 feature_type = 5;
    uint32 index = 6;
    uint32 function_address = 7;
    uint32 buffer_size = 8;
    uint64 data = 9;
}

message Command {
    oneof command {
        Upgrade upgrade = 1;
        CanMessage can_message = 2;
    }
}

message Commands {
    repeated Command commands = 1;
}